# better-dedent

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
src/better_dedent/: __about__.py  __init__.py
tests/: test_better_dedent.py
